# workflow-scripts

17_4_PH_analysis/: 17_4_PH_analysis.py
analysis_17_4_PH/: analysis_17_4_PH.py
field_variable_comparison/: field_variable_comparison.py
gcode_parsers/: ExampleOkuma.MIN  ExampleRobot.RB  ParseOkuma.py  ParseROS.py
jun25_dwell_rook_toolpath/: mesh.inp  meshold.inp  toolpath_writer.py
nov24_sns_scan_path_writer/: 2_section_timing.csv  D1.inp  D1_lumped.inp  D2.inp  D3_lumped.inp  D4.inp  D4_lumped.inp  D5.inp  D5_from_gcode.inp  D5_gcode.apt  D5_lumped.inp  D6.inp  D6_lumped.inp  D7.inp  D7_from_gcode.inp  D7_gcode.apt  D7_lumped.inp  D8.inp  D8_lumped.inp  ParseROS.py  high_curvature_even.inp  high_curvature_odd.inp  stringer.inp  stringer_even.inp  stringer_long_even.inp  stringer_long_odd.inp  stringer_lumped.inp  stringer_odd.inp  stringer_slow_even.inp  stringer_slow_odd.inp  two_segment_even.inp  two_segment_odd.inp  weave_even.inp  weave_odd.inp  weave_timing.csv  write_scan_path_from_ros.py
shadow_postprocessing_scripts/: README.md  print_variablity_time_series.py  shadow_analysis.py  shadow_analysis_cli.py  shadow_postprocessor.py  visit_shadow_plots.py  (+2 more)
snap_tessellated_mesh/: CMakeLists.txt  README.md  snap_to_tessellated_mesh.cpp
snap_tessellated_mesh/ci/: Dockerfile
snap_tessellated_mesh/tests/: CMakeLists.txt  curved_wall_input.igs  curved_wall_input.vtk  curved_wall_output.vtk  curved_wall_output_z.vtk
tesselate_mesh/autofoam/: pyproject.toml
tesselate_mesh/autofoam/src/autofoam/: __init__.py  cases.py  main.py  mesh.py  util.py
(+264 files in other folders)
